2007-07-31  Inge Wallin  <inge@lysator.liu.se>

	Move vector on/off parameters to ViewParams
	* src/lib/ViewParams.h: new members: m_showIcelayer,
	m_showBorders, m_showRivers, m_showLakes
	* src/lib/ViewParams.cpp (constructor): initialize the new members
	* src/lib/vectorcomposer.h (class VectorComposer): 
	(drawTexturemap): Change signature to only take a ViewParams*
	(paintBaseTexturemap): Change signature to take a ViewParams*
	(paintTexturemap): Change signature to take a ViewParams*
	* src/lib/vectorcomposer.cpp: 
	* src/lib/MarbleModel.cpp (paintGlobe): Call
	VectorComposer methods according to new signatures.
	* src/lib/MarbleWidget.cpp: Use new members in Viewparams

2007-07-30  Inge Wallin  <inge@lysator.liu.se>

	Move relief on/off parameter to ViewParams
	* src/lib/ViewParams.h: new member: m_showRelief
	* src/lib/ViewParams.cpp (constructor): initialize m_showRelief
	* src/lib/texcolorizer.h (class TextureColorizer): Change
	signature to only take a ViewParams*
	* src/lib/texcolorizer.cpp (colorize): 
	  - take a ViewParams* as parameter only
	  - Get showRelief from the view params
	* src/lib/MarbleModel.cpp (paintGlobe): Call
	TexColorizer::colorize according to new signature.
	* src/lib/MarbleWidget.cpp (showRelief): Get data from viewparams.
	(setShowRelief): set data in viewparams 

2007-07-29  Murad Tagirov  <tmurad@gmail.com>

    Temporary disabled weightfilter if KML_GSOC is defined
    * src/lib/placemarkpainter.cpp

    Commented m_coordinate field becauase PlaceMark class
    already has same protected field
    * src/lib/kml/KMLPlaceMark.h

    Not delete m_placeMarkContainer field is KML_GSOC is defined
    * src/lib/MarbleModel.cpp

2007-07-29  Torsten Rahn  <rahn@kde.org>

	- getting KDE.NL out of the water and fixing Ingwa's
	  most recent complaint.
	  -- which was depth in lakes.

2007-07-29  Torsten Rahn  <rahn@kde.org>

	- ressource priorities: homeDir, systemDir, unixDir

2007-07-29  Torsten Rahn  <rahn@kde.org>
